# lite-db-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main
include/: query_executor.hpp
include/ctx/: db_context.cpp  db_context.hpp
include/litedb/: lite_db_engine.cpp  lite_db_engine.hpp
include/query/: ast_node_visitor.hpp  data.hpp  data_type.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  query_executor.cpp  query_executor.hpp  symbol.hpp  token.cpp  token.hpp  token_trie.cpp  token_trie.hpp
include/query/ast_nodes/: ast_node.hpp  ast_nodes.hpp  builders.hpp  create_database_node.cpp  create_database_node.hpp  create_database_node_builder.hpp  create_table_node.cpp  create_table_node.hpp  delete_node.cpp  delete_node.hpp  drop_database_node.cpp  drop_database_node.hpp  node_builder.hpp  node_builder_factory.hpp  select_node.cpp  select_node.hpp  select_node_builder.hpp  show_databases_node.cpp  show_databases_node.hpp  update_node.cpp  update_node.hpp  use_node.cpp  use_node.hpp
include/query/builders/: builders.hpp  create_database_node_builder.cpp  create_database_node_builder.hpp  create_table_node_builder.cpp  create_table_node_builder.hpp  delete_node_builder.cpp  delete_node_builder.hpp  drop_database_node_builder.cpp  drop_database_node_builder.hpp  insert_into_node_builder.hpp  node_builder.hpp  node_builder_factory.hpp  select_node_builder.cpp  select_node_builder.hpp  show_databases_node_builder.cpp  show_databases_node_builder.hpp  update_node_builder.cpp  update_node_builder.hpp  use_node_builder.cpp  use_node_builder.hpp
include/stg/: storage_engine.cpp  storage_engine.hpp
include/utils/: utils.hpp
src/: main.cpp
src/db/: db_context.cpp  db_context.hpp
src/litedb/: lite_db_engine.cpp
src/query/: data.hpp  lexer.hpp  parser.cpp  parser.hpp  query_executor.cpp  query_executor.hpp  symbol.hpp  token.cpp  token.hpp  token_trie.hpp
src/query/ast_nodes/: ast_node.hpp  ast_nodes.hpp  create_database_node.cpp  create_database_node.hpp  create_table_node.cpp  create_table_node.hpp  delete_node.cpp  delete_node.hpp  drop_database_node.cpp  drop_database_node.hpp  insert_into_node.cpp  insert_into_node.hpp  select_node.cpp  select_node.hpp  show_databases_node.cpp  show_databases_node.hpp  update_node.cpp  update_node.hpp  use_node.cpp  use_node.hpp
src/query/builders/: create_database_node_builder.cpp  create_database_node_builder.hpp  create_table_node_builder.cpp  create_table_node_builder.hpp  delete_node_builder.cpp  drop_database_node_builder.cpp  drop_database_node_builder.hpp  insert_into_node_builder.cpp  insert_into_node_builder.hpp  node_builder.hpp  node_builder_factory.hpp  select_node_builder.cpp  select_node_builder.hpp  show_databases_node_builder.hpp  update_node_builder.hpp  use_node_builder.cpp  use_node_builder.hpp
src/stg/: data_manager.cpp  data_manager.hpp  db_manager.cpp  db_manager.hpp  page.cpp  page.hpp  page_manager.cpp  page_manager.hpp  row_validator.cpp  row_validator.hpp  storage_engine.cpp  storage_engine.hpp  table_manager.cpp  table_manager.hpp  table_schema.hpp  table_schema_manager.cpp  table_schema_manager.hpp
src/test/integration/: test_create_table.cpp  test_insert_into.cpp
src/utils/: result.hpp  utils.hpp
test/integration/: test_create_database.cpp  test_create_table.cpp  test_drop_database.cpp  test_insert_into.cpp  test_page_storage.cpp  test_show_databases.cpp  test_use_database.cpp
tools/: litedb_terminal.cpp
